# ml4w-zh

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ml4w-zh-x86_64-linux
.github/workflows/: ci.yml
docs/: 注意事项.md
patches/: patches.json  translations.yaml
patches/definitions/: 01-scripts.toml  02-ml4w-scripts.toml  03-lua.toml  04-welcome-app.toml  05-qml.toml  06-json.toml
src/: cli.rs  error.rs  main.rs  patch.rs  util.rs
