[package]
name = "ml4w-zh"
version = "0.1.0"
edition = "2021"
description = "ML4W dotfiles Chinese localization tool — apply, revert, and maintain zh-CN translations"
authors = ["danxcheng"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
